--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -13,5 +13,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.SECRET }}
         TARGET_REPO: prgding/java-interview
         TARGET_BRANCH: gh-pages
-        BUILD_SCRIPT: yarn && yarn build
+        BUILD_SCRIPT: npm run docs:build
         BUILD_DIR: src/.vuepress/dist/
